# hermes-dashboard

./: .gitignore  PLAN.md  README.md  pyproject.toml
dashboard/: __init__.py  __main__.py  app.py  config.py
dashboard/readers/: __init__.py  cron.py  hermes_config.py  memory.py  sessions.py  skills.py
dashboard/static/: style.css
dashboard/templates/: 404.html  base.html  config.html  cron.html  cron_detail.html  index.html  memory.html  session_detail.html  sessions.html  skill_detail.html  skills.html
