[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-dashboard"
version = "0.1.0"
description = "Minimal read-only web dashboard for Hermes Agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Federico", email = "ifrederico@users.noreply.github.com" },
]
keywords = ["hermes", "dashboard", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "starlette>=0.37.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.24.0",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "pygments>=2.17",
]

[project.scripts]
hermes-dashboard = "dashboard.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["dashboard"]

[project.urls]
Homepage = "https://github.com/ifrederico/hermes-dashboard"
Repository = "https://github.com/ifrederico/hermes-dashboard"
Issues = "https://github.com/ifrederico/hermes-dashboard/issues"
